fix past cutoff point behavior

--- a/style.css
+++ b/style.css
@@ -377,6 +377,11 @@ main>div:last-of-type {
     padding: 20px;
 }
 
+#cart .info .warning {
+    padding: 20px;
+    color: yellow;
+}
+
 #cart.hidden {
     bottom: -60px;
     transition: all 0.5s ease-in;
